// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plain Blank line 1`] = `
[
  {
    "indent": 0,
    "nodes": [],
    "type": "line",
  },
]
`;

exports[`plain Keep tail space 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "Tail space ->  ",
        "text": "Tail space ->  ",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;

exports[`plain Simple plain text 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "raw": "Plain text",
        "text": "Plain text",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;
